# peko

./: .gitignore  README.md  package.json  vite.config.js
.agents/: SCRATCHPAD.md  STANDARDS.md
.agents/code_reviewer/: AGENT.md
.agents/devops/: AGENT.md
.agents/orchestrator/: AGENT.md
.agents/planner/: AGENT.md
.agents/security/: AGENT.md
.agents/tech_writer/: AGENT.md
.agents/tester/: AGENT.md
.agents/ui_ux/: AGENT.md
.agents/workflows/: iteration-loop.md
.claude/: HOOK_SETUP.md  settings.local.json
.gemini/: settings.json
.shared/: blocked_commands.json  dangerous_command_blocker.py
.shared/plugins/feature-dev/: README.md  plugin.json
.shared/plugins/feature-dev/agents/: code-architect.md  code-explorer.md  code-reviewer.md
.shared/plugins/feature-dev/commands/: feature-dev.md
.shared/plugins/frontend-design/: plugin.json
.shared/plugins/pr-review-toolkit/: README.md  plugin.json
.shared/plugins/pr-review-toolkit/agents/: code-reviewer.md  code-simplifier.md  comment-analyzer.md  pr-test-analyzer.md  silent-failure-hunter.md  type-design-analyzer.md
.shared/plugins/ralph-wiggum/: README.md  plugin.json
.shared/skills/frontend-design/: README.md  SKILL.md
docs/: CODE_REVIEW.md  TECHNICAL.md
security/: SECURITY_ASSESSMENT.md  THREAT_MODEL.md  sbom.cdx.json
src/: index.html  main.js  notes.css  notes.html  notes.js  styles.css  tab-switcher.css  tab-switcher.html  tab-switcher.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: test_report.md
(+7 files in other folders)
