[package]
name = "peko"
version = "0.1.0"
description = "Turn any webpage into a desktop app"
authors = ["Peko Developers"]
edition = "2021"

[lib]
name = "peko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
log = "0.4"
env_logger = "0.11"
tauri-plugin-clipboard-manager = "2.3.2"
tokio = { version = "1", features = ["time"] }
